--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
  <p><b>Name: </b>Robin Joshua R. Hermocilla</p>
  <p><b>Address: </b>Maogma Street, Vilmar Homes Subdivision, Calauag, Naga City</p>
  <p><b>Contact Information: </b>09182622222 (Smart)</p>
- <p><b>Short Personal Statement: </b>"Carpe Diem"</p>
+ <p><b>Short Personal Statement: </b><i>"Carpe Diem"</i></p>
    <h2>Educational History</h2>
    <h3>High School</h3>
     <p>Ateneo de Naga University Junior High School</p>
@@ -51,5 +51,9 @@
    <ul>
     <li>Ateneo Computer Programming Competition (Top 6)</li>
    </ul>
+  <hr>
+   <h3>HAVE PROJECTS IN MIND?</h3>
+    <h4>Let's turn your ideas into creative and strategically built website.</h4>
+   <a class="button" href="file:///C:/Users/student/Desktop/Resume-main/contact.html">Contact Me</a>
  </body>
 
