--- a/resume.html
+++ b/resume.html
@@ -54,6 +54,6 @@
   <hr>
    <h3>HAVE PROJECTS IN MIND?</h3>
     <h4>Let's turn your ideas into creative and strategically built website.</h4>
-   <a class="button" href="file:///C:/Users/student/Desktop/Resume-main/contact.html">Contact Me</a>
+   <a class="button" href="contact.html">Contact Me</a>
  </body>
 
