--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
  </head>
 
  <body>
-<a class="button" href="file:///C:/Users/student/Desktop/Resume-main/resume.html">Back</a>
+<a class="button" href="resume.html">Back</a>
  <hr>
  <h1>Drop a Message!</h1>
   <form>
