--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,6 @@
 <a class="button" href="https://www.facebook.com/robin.hermocillaa">Facebook</a>
 <a class="button" href="https://github.com/sayXeiaa/">Github</a>
   </form>
-  </textarea>
  </body>
+</html>
 
