--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
  <head>
+ <link rel="stylesheet" href="style.css">
   <title>
    Robin Hermocilla Contact
   </title>
@@ -20,6 +21,7 @@
   <input type="submit" value="Submit">
   <input type="reset" value="Reset">
   <br></br>
+ <hr>
 <a class="button" href="https://www.linkedin.com/">LinkedIn</a>
 <a class="button" href="https://www.facebook.com/robin.hermocillaa">Facebook</a>
 <a class="button" href="https://github.com/sayXeiaa/">Github</a>
