--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,32 @@
 <!DOCTYPE HTML>
 <html>
- <head>
- <link rel="stylesheet" href="style.css">
+<head>
+  <link rel="stylesheet" href="style.css">
   <title>
-   Robin Hermocilla Contact
+  Hermocilla Contact
   </title>
- </head>
+</head>
 
- <body>
-<a class="button" href="resume.html">Back</a>
- <hr>
- <h1>Drop a Message!</h1>
-  <form>
-  <input type="text" id="fame" placeholder="Enter name"><br>
-  <input type="email" id="eadd" placeholder="Enter Email Address">
-  
-  <br></br>
-  <textarea rows="10" cols="50" placeholder="Your message here..."></textarea>
-  <br></br>
-  <input type="submit" value="Submit">
-  <input type="reset" value="Reset">
-  <br></br>
- <hr>
-<a class="button" href="https://www.linkedin.com/">LinkedIn</a>
-<a class="button" href="https://www.facebook.com/robin.hermocillaa">Facebook</a>
-<a class="button" href="https://github.com/sayXeiaa/">Github</a>
-  </form>
- </body>
+<body>
+  <a class="button" href="resume.html">Back</a>
+<hr>
+    <h1>Drop a Message!</h1>
+      <form>
+        <input type="text" id="fame" placeholder="Enter name"><br>
+        <input type="email" id="eadd" placeholder="Enter Email Address">
+      <br></br>
+          <textarea placeholder="Your message here..."></textarea>
+      <br></br>
+        <input class="button" type="submit" value="Submit">
+        <input class="button" type="reset" value="Reset">
+      <br></br>
+<hr>
+<div class="bot"
+  <h3 id="lb">Socials:</h3>
+  <a class="button" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="button" href="https://www.facebook.com/robin.hermocillaa">Facebook</a>
+  <a class="button" href="https://github.com/sayXeiaa/">Github</a>
+</div>
+      </form>
+</body>
 </html>
-
