--- a/resume.html
+++ b/resume.html
@@ -1,60 +1,61 @@
 <!DOCTYPE HTML>
 <html>
- <head>
- <link rel="stylesheet" href="style.css">
-  <title>
-   Hermocilla Resume
-  </title>
- </head>
+<head>
+  <link rel="stylesheet" href="style.css">
+<title>
+  Hermocilla Resume
+</title>
+</head>
 
- <body>
+<body>
   <h1>Online Resume</h1>
- <hr>
- <img src = "pic.jpg" length = "200" width="200">
- <p><b>Name: </b>Robin Joshua R. Hermocilla</p>
- <p><b>Address: </b>Maogma Street, Vilmar Homes Subdivision, Calauag, Naga City</p>
- <p><b>Contact Information: </b>09182622222 (Smart)</p>
- <p><b>Short Personal Statement: </b><i>"Carpe Diem"</i></p>
-   <h2>Educational History</h2>
-   <h3>High School</h3>
-    <p>Ateneo de Naga University Junior High School</p>
-   <h3>Senior High School</h3>
-    <p>Ateneo de Naga University Senior High School</p>
-   <h3>College</h3>
-    <p>Ateneo de Naga University</p>
-   <h2>General and Technical Skills</h2>
-   <table>
-     <tr>
-      <th>Technical Skills</th>
-      <th>Proficiency</th>
-     </tr>
-     <tr>
-      <td>C++</td>
-      <td>Beginner</td>
-     </tr>
-     <tr>
-      <td>Java</td>
-      <td>Beginner</td>
-     </tr>
-     <tr>
-      <td>HTML</td>
-      <td>Beginner</td>
-     </tr>
-   </table>
-   <h2>Character References</h2>
-   <ol>
-   <li>Adrian Leo T. Pajarillo</li>
-   <li>Marianne Ang</li>
-   <li>Maricel L. Fornaleza</li>
-   </ol>
-   <h2>Additional Information</h2>
-   <h3>Certifications</h3>
-   <ul>
-    <li>Ateneo Computer Programming Competition (Top 6)</li>
-   </ul>
-  <hr>
-   <h3>HAVE PROJECTS IN MIND?</h3>
-    <h4>Let's turn your ideas into creative and strategically built website.</h4>
-   <a class="button" href="contact.html">Contact Me</a>
- </body>
+<hr>
+  <img src = "pic.jpg" length = "200" width="200">
+  <p><b id="pi">Name: </b>Robin Joshua R. Hermocilla</p>
+  <p><b id="pi">Address: </b>Maogma Street, Vilmar Homes Subdivision, Calauag, Naga City</p>
+  <p><b id="pi">Contact Information: </b>09182622222 (Smart)</p>
+  <p><b id="pi">Short Personal Statement: </b><i>"Carpe Diem"</i></p>
 
+<h2>Educational History</h2>
+  <h3 id="lb">High School</h3>
+    <p id="school">Ateneo de Naga University Junior High School</p>
+  <h3 id="lb">Senior High School</h3>
+    <p id="school">Ateneo de Naga University Senior High School</p>
+  <h3 id="lb">College</h3>
+    <p id="school">Ateneo de Naga University</p>
+
+<h2>General and Technical Skills</h2>
+  <table>
+  <tr>
+    <th id="tsp">Technical Skills</th>
+    <th id="tsp">Proficiency</th>
+  </tr>
+  <tr>
+    <td>C++</td>
+    <td>Beginner</td>
+  </tr>
+  <tr>
+    <td>Java</td>
+    <td>Beginner</td>
+  </tr>
+  <tr>
+    <td>HTML</td>
+    <td>Beginner</td>
+  </tr>
+  </table>
+<h2>Character References</h2>
+  <ol>
+    <li>Adrian Leo T. Pajarillo</li>
+    <li>Marianne Ang</li>
+    <li>Maricel L. Fornaleza</li>
+  </ol>
+<h2>Additional Information</h2>
+  <h3 id="lb">Certifications</h3>
+    <ul>
+      <li>Ateneo Computer Programming Competition (Top 6)</li>
+    </ul>
+<hr>
+  <h3>HAVE PROJECTS IN MIND?</h3>
+    <h4>Let's turn your ideas into creative and strategically built website.</h4>
+<a class="button" href="contact.html">Contact Me</a>
+</body>
